--- a/.gitignore
+++ b/.gitignore
@@ -393,3 +393,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,windows,linux,vim,python,rust,node
+
+
+# AOC inputs
+inputs/
